--- a/.gitmodules
+++ b/.gitmodules
@@ -13,4 +13,4 @@
 [submodule "lib/risc0"]
 	path = lib/risc0
 	url = https://github.com/risc0/risc0
-	branch = parker/bonsai-snark-types
+	rev = "4652f9c"
