--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ members = ["methods", "relay"]
 resolver = "2"
 
 [workspace.dependencies]
-risc0-build = { git = "https://github.com/risc0/risc0", branch = "release-0.18" }
-risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "release-0.18", default-features = false }
-bonsai-sdk = { git = "https://github.com/risc0/risc0", branch = "release-0.18" }
-bonsai-ethereum-relay = { git = "https://github.com/risc0/risc0", branch = "release-0.18" }
+risc0-build = { git = "https://github.com/risc0/risc0", rev = "4652f9c" }
+risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "4652f9c", default-features = false }
+bonsai-sdk = { git = "https://github.com/risc0/risc0", rev = "4652f9c" }
+bonsai-ethereum-relay = { git = "https://github.com/risc0/risc0", rev = "4652f9c" }
 methods = { path = "./methods", package = "bonsai-starter-methods" }
 
 # Always optimize; building and running the guest takes much longer without optimization.
